--- a/index.html
+++ b/index.html
@@ -56,6 +56,15 @@
                 </a>
              </li>
             </div>
+             <div class="result-card bg-blue-50 p-4 rounded-lg border border-blue-100">
+            <li>
+            <a href="calc.html"
+               class="text-blue-600  transition-transform duration-200 ease-in-out"
+               onclick="animateClick(this)">
+               Konversi produk
+            </a>
+            </li>
+            </div>
         </div>
         </ul>
         </nav>
