--- a/kalk/web.html
+++ b/kalk/web.html
@@ -40,7 +40,7 @@
         <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-6">
             <div class="result-card bg-blue-50 p-4 rounded-lg border border-blue-100">
             <li>
-            <a href="index.html"
+            <a href="web.html"
                class="text-blue-600  transition-transform duration-200 ease-in-out"
                onclick="animateClick(this)">
                Kalkulasi
@@ -55,15 +55,6 @@
                Aplikasi Appsheet
                 </a>
              </li>
-            </div>
-             <div class="result-card bg-blue-50 p-4 rounded-lg border border-blue-100">
-            <li>
-            <a href="calc.html"
-               class="text-blue-600  transition-transform duration-200 ease-in-out"
-               onclick="animateClick(this)">
-               Konversi produk
-            </a>
-            </li>
             </div>
         </div>
         </ul>
@@ -81,7 +72,20 @@
                 
                 <form id="inventoryForm">
                     <div class="mb-4">
-                        <label class="block text-gray-700 mb-2">Jumlah Periode:</label>
+                        
+<div class="mb-4">
+  <label class="block text-gray-700 mb-2">Bulan Awal:</label>
+  <input type="number" id="startMonth" min="1" max="12" value="1"
+         class="w-full px-3 py-2 border border-gray-300 rounded-md">
+</div>
+
+<div class="mb-4">
+  <label class="block text-gray-700 mb-2">Tahun Awal:</label>
+  <input type="number" id="startYear" min="2000" value="2024"
+         class="w-full px-3 py-2 border border-gray-300 rounded-md">
+</div>
+
+<label class="block text-gray-700 mb-2">Jumlah Periode:</label>
                         <input type="number" id="periods" min="2" max="12" value="12" 
                                class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500">
                     </div>
@@ -262,7 +266,7 @@
             </div>
         </div>
     </div>
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="base.js"></script>
     <script>
        function animateClick(element) {
     element.classList.add("scale-90"); // mengecilkan sedikit
